--- a/monsters/woods/index.html
+++ b/monsters/woods/index.html
@@ -188,7 +188,7 @@
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 敏銳感官</p>
 <p class="MonsterDescription">
-	「就跟他們從事的所有工作一樣，精靈們把戰爭當作一門藝術。我曾看過他們戰鬥……阿絲特里德的面紗之戰，對，我就是那麼老，孩子，現在安靜點聽我說。我看見一名精靈女戰士，她披著如冬季天空一樣明亮的盔甲，雪白的髮絲娟柔飄揚，一席海藍色的旗幟纏綁在她的戰矛上。她在樹林間擺盪飛舞的姿態彷彿天使，降下打擊，並讓刀刃沐浴在冰冷空氣下那蒸騰的鮮血之中。我從未感到自己是如此的渺小過。你知道，我曾在戰穆爾的衛官長手下受過訓練，孩子，我握著劍的時間比你的人生還要長，但就在那一刻，我知道我長久以來鍛鍊的技巧毫無意義。感謝諸神那些精靈當時是站在我們這一邊。這是我見過最美麗、也最可怕的事情了。」 <b>本能</b>: 追尋完美</p>
+	「就跟他們從事的所有工作一樣，精靈們把戰爭當作一門藝術。我曾看過他們戰鬥……阿絲特里德的面紗之戰，對，我就是那麼老，孩子，現在安靜點聽我說。我看見一名精靈女戰士，她披著如冬季天空一樣明亮的盔甲，雪白的髮絲娟柔飄揚，一席海藍色的旗幟纏綁在她的戰矛上。她在樹林間擺盪飛舞的姿態彷彿天使，降下打擊，並讓刀刃沐浴在被冰冷空氣環繞的蒸騰鮮血之中。我從未感到自己是如此的渺小過。你知道，我曾在戰穆爾的衛官長手下受過訓練，孩子，我握著劍的時間比你的人生還要長，但就在那一刻，我理解到我長久鍛鍊的技巧全都毫無意義。感謝諸神那些精靈當時是站在我們這一邊。這是我見過最美麗、也最可怕的事情了。」 <b>本能</b>: 追尋完美</p>
 <ul>
 	<li>打擊弱點</li>
 	<li>將古老的計畫付諸行動</li>
@@ -197,15 +197,17 @@
 <p class="MonsterStats">秘法之火 (d10 傷害, 無視護甲), 12 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">短程, 遠程</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 敏銳感官</p>
-<p class="MonsterDescription">True elvish magic isn’t like the spells of men. Mannish wizardry is all rotes and formulas. They cheat to find the arcane secrets that resound all around them. They are deaf to the arcane symphony that sings in the woods. Elvish magic requires a fine ear to hear that symphony and the voice with which to sing. To harmonize with what is already resounding. Men bind the forces of magic to their will; Elves simply pluck the strings and hum along. The High Arcanists, in a way, have become more and less than any elf. The beat of their blood is the throbbing of all magic in this world. <b>本能</b>: 釋放力量</p>
+<p class="MonsterDescription">
+	真正的精靈魔法不同於人類的法術。人族的巫術魔法全都是些機械性的背誦和死板公式，透過作弊的手段來發掘那些在他們周遭迴盪的奧法秘密。他們眼瞎耳聾，聽不見那在林間迴盪的奧法之歌。精靈魔法需要一雙能聽見奧法旋律的靈敏耳朵、以及那能吟唱出交響合弦的嗓音。當需要與那已經迴盪四周的旋律協調時，人們將魔法力量與自己的意志合而為一；而精靈們只需簡單的撥動琴弦，跟著哼唱。其中，高等秘術師在某種程度上則比任何精靈更深按此道。他們血液中鼓動的節奏呼應著這個世界一切魔法的悸動。 <b>本能</b>: 釋放力量</p>
 <ul>
 	<li>發揮大自然所要求的魔法</li>
 	<li>施放元素力量</li></ul>
 <h3 class="MonsterName">獅鷲獸 (Griffin)	<span class="Tags">集團, 大型, 組織</span></h3>
 <p class="MonsterStats">禽爪 (d8+3 傷害), 10 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠, 強力</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Wings</p>
-<p class="MonsterDescription">On first glance, one might mistake the griffin for another magical mistake like the manticore or the chimera. It looks the part, doesn’t it? These creatures have the regal haughtiness of a lion and the arrogant bearing of an eagle, but they temper those with the unshakeable loyalty of both. To earn the friendship of a griffin is to have an ally all your living days. Truly a gift, that. If you’re ever lucky enough to meet one be respectful and deferential above all else. It may not seem it but they can perceive the subtlest slights and will answer them with a sharp beak and talons. <b>本能</b>: 服侍同伴</p>
+<p class="MonsterQualities"><strong>特性:</strong> 羽翼</p>
+<p class="MonsterDescription">
+	乍一看，人們可能會把獅鷲獸誤認成另一種像蠍尾獅或奇美拉這類因魔法而誕生的錯誤。牠看起來確實是這樣，不是嗎？這些生物有著獅子的威嚴，也有著雄鷹的傲慢，卻又以雙方那不可動搖的忠誠將其調和為一。贏得了獅鷲獸的友誼，就等同得到了一生的盟友。這是份真正的大禮，能讓你受惠終生。如果你有夠好的運氣遭遇到牠們，最重要的是表現出尊重和恭敬。儘管看起來並非如此，但牠們能輕易察覺到哪怕是最最細微的怠慢，並回以那鋒利的尖喙和禽爪待之。 <b>本能</b>: 服侍盟友</p>
 <ul>
 	<li>評斷某人的價值</li>
 	<li>將一名同伴帶到空中</li>
@@ -222,10 +224,12 @@
 <h3 class="MonsterName">食人魔 (Ogre)	<span class="Tags">集團, 大型, 聰穎</span></h3>
 <p class="MonsterStats">棍棒 (d8+5 傷害), 10 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠, 強力</span></p>
-<p class="MonsterDescription">A tale, then. Somewhere in the not-so-long history of the mannish race there was a divide. In days when men were merely dwellers-in-the-mud with no magic to call their own, they split in two: one camp left their caves and the dark forests and built the first city to honor the gods. The others, a wild and savage lot, retreated into darkness. They grew, there. In the deep woods a grim loathing for their softer kin gave them strength. They found dark gods of their own, there in the woods and hills. Ages passed and they bred tall and strong and full of hate. We have forged steel and they match it with their savagery. We may have forgotten our common roots, but somewhere, deep down, the ogres remember. <b>本能</b>: To return the world to darker days</p>
-<ul><li>Destroy something</li>
-<li> Fly into a rage</li>
-<li> Take something by force</li></ul>
+<p class="MonsterDescription">
+	曾有這麼一個傳說：在人類沒那麼久遠的種族歷史中曾有過這麼一次分裂。當人們仍只是居於泥沼、還沒有屬於自己魔法的那段時光，他們一分為二：其中一方離開了他們棲居的洞穴和黑暗叢林，建造起第一座城市以榮耀諸神。而另一方，野蠻而原始得多，則退回了黑暗之中。他們在那裡成長茁壯。在森林的深處，他們對柔弱同族的殘酷憎恨賦予了他們力量。他們在叢林和山丘深處找到了自己的黑暗之神。歲月流逝，他們變得又高又壯，而且充滿仇恨。我們鍛造了鋼鐵，而他們則以他們的荒野蠻力與之相對。我們或許早已遺忘了我們共同的根，但在某處，在黑暗的深處，這些食人魔仍然記得。 <b>本能</b>: 讓世界回到更黑暗的日子</p>
+<ul>
+	<li>摧毀某物</li>
+	<li>勃然大怒</li>
+	<li>強行奪取某物</li></ul>
 <h3 class="MonsterName">鋒刃野豬 (Razor Boar)	<span class="Tags">單獨</span></h3>
 <p class="MonsterStats">獠牙 (d10 傷害, 3 穿透), 16 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 毀亂</span></p>
@@ -238,15 +242,17 @@
 <h3 class="MonsterName">薩特羊人 (Satyr)	<span class="Tags">集團, 狡猾, 魔法, 囤財者</span></h3>
 <p class="MonsterStats">衝鋒 (低[2d8] 傷害), 10 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Enchantment</p>
-<p class="MonsterDescription">One of only a very few creatures to be found in the old woods that don’t outright want to maim, kill, or eat us. They dwell in glades pierced by the sun, and dance on their funny goat-legs to enchanting music played on pipes made of bone and silver. They smile easily and, so long as you please them with jokes and sport, will treat our kind with friendliness. They’ve a mean streak, though, so if you cross them, make haste elsewhere; very few things hold a grudge like the stubborn satyr. <b>本能</b>: 享樂</p>
-<ul><li>Pull others into revelry through magic</li>
-<li>Force gifts upon them</li>
-<li>Play jokes with illusions and tricks</li></ul>
+<p class="MonsterQualities"><strong>特性:</strong> 著迷魅惑</p>
+<p class="MonsterDescription">
+	他們是這古老森林中少數不會直接傷害、殺死、或吃掉我們的生物之一。他們棲息在陽光灑落的空地，使用獸骨和白銀排笛演奏著迷人的音樂，伴隨著那滑稽羊腿跳出的雀躍舞蹈。他們很容易發笑，而且只要你用笑話和運動取悅他們，他們就會以友好態度回報我們的良善。不過他們的脾氣不怎麼好，所以如果你不小心觸怒了他們，趕緊逃遠點；很少有傢伙會像頑固的薩特羊人那般記仇。 <b>本能</b>: 享樂</p>
+<ul>
+	<li>透過魔法讓他人一同狂歡</li>
+	<li>強塞贈禮給他們</li>
+	<li>利用幻術和技倆開玩笑</li></ul>
 <h3 class="MonsterName">小妖精 (Sprite)	<span class="Tags">成群, 微型, 隱匿, 魔法, 狡猾, 聰穎</span></h3>
 <p class="MonsterStats">匕首 (低[2d4] 傷害), 3 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">觸及</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> 飛翼, 妖精魔法</p>
+<p class="MonsterQualities"><strong>特性:</strong> 翅膀, 妖精魔法</p>
 <p class="MonsterDescription">
 	我會把他們歸類為元素生物，儘管「煩人」並不是一種元素。 <b>本能</b>: 惡作劇</p>
 <ul>
@@ -274,14 +280,16 @@
 <p class="MonsterStats">啃咬 (d10+2 傷害, 1 穿透), 12 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 毀亂</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 弱點為銀製品</p>
-<p class="MonsterDescription">“Beautiful, isn’t it? The moon, I mean. She’s watching us, you know? Her pretty silver eyes watch us while we sleep. Mad, too—like all the most beautiful ones. If she were a woman, I’d bend my knee and make her my wife on the spot. No, I didn’t ask you here to speak about her, though. The chains? For your safety, not mine. I’m cursed, you see. You must have suspected. The sorcerer-kings called it “lycanthropy” in their day—passed on by a bite to make more of our kind. No, I could find no cure. Please, don’t be scared. You have the arrows I gave you? Silver, yes. Ah, you begin to understand. Don’t cry, sister. You must do this for me. I cannot bear more blood on my hands. You must end this. For me.” <b>本能</b>: To shed the appearance of civilization</p>
-<ul><li>Transform to pass unnoticed as beast or man</li>
-<li>Strike from within</li>
-<li>Hunt like man and beast</li></ul>
+<p class="MonsterDescription">「她可真美，不是嗎？我是說月亮。妳知道嗎？她看顧著我們，她銀白色的雙眼總在我們熟睡時注視著我們。當然，她同時是瘋狂的──就跟所有最美麗的事物一樣。如果她是女人，我會立刻屈膝跪地，讓她成為我的妻子……不，我讓妳來這裡不是為了要談論她。你問這些鎖鏈？那是為了妳的安全，不是我的。妳瞧，我中了詛咒。哈，妳一定在懷疑我的話。術士之王在他們的時代將其稱為『化獸症』──透過噬咬傳遞，製造出更多的同類。不，我找不到任何治療方法。拜託，不要懼怕，妳還留著我給的那只箭矢嗎？純銀打造的那只，是的。啊，妳開始明白了……不要哭，姊姊。妳必須為我做這件事。我不能再忍受我雙手上沾滿鮮血，妳必須終止這一切。為了我。」 <b>本能</b>: 擺脫文明的表象</p>
+<ul>
+	<li>變形成人類或野獸的樣貌以躲避注意</li>
+	<li>從內部襲擊</li>
+	<li>像人類和野獸一樣狩獵</li></ul>
 <h3 class="MonsterName">座狼 (Worg)<span class="Tags">成群, 組織</span></h3>
 <p class="MonsterStats">啃咬 (d6 傷害), 3 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterDescription">As horses are to the civil races, so go the worg to the goblins. Mounts, fierce in battle, ridden by only the bravest and most dangerous, are found and bred in the forest primeval to serve the goblins in their wars on men. The only safe worg is a pup, separated from its mother. If you can find one of these, or make orphans of a litter with a sharp sword, you’ve got what could become a loyal protector or hunting hound in time. Train it well, mind you, for the worg are smart and never quite free of their primal urges. <b>本能</b>: To serve</p>
+<p class="MonsterDescription">
+	如同騎馬之於文明種族，座狼之於哥布林也是如此。牠們驍勇善戰，只有最勇敢且最危險的個體能夠騎乘於上，牠們在原始森林中被發現並培育，為哥布林對人類發起的戰爭中所用。唯一無害的座狼就是那被與牠們母親分離的幼崽。如果你能找到其中之一、或憑著利劍將整窩幼崽變成孤兒，你就將得到一只忠誠的守護者和獵犬。一定要好好地訓練牠，我提醒過你了，因為座狼相當聰明，且從來沒有完全擺脫過牠們血脈中那原始的衝動。 <b>本能</b>: 為騎手所用</p>
 <ul>
 	<li>載著騎手衝入戰場</li>
 	<li>為牠的騎手帶來優勢</li>
