--- a/monsters/swamp/index.html
+++ b/monsters/swamp/index.html
@@ -116,7 +116,7 @@
 <h3 class="MonsterName">巴庫納瓦 (Bakunawa)	<span class="Tags">單獨, 大型, 聰穎, 毀亂, 強力</span></h3>
 <p class="MonsterStats">Bite (d10+3 傷害, 1 穿透), 16 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Amphibious</p>
+<p class="MonsterQualities"><strong>特性:</strong> 兩棲</p>
 <p class="MonsterDescription">Dragon-Turtle’s sister is a mighty serpent queen. Ten yards of scales and muscle, they say she wakes with a hunger when the sun disappears from the sky. She is attracted by bright light in the darkness and like any snake, the Bakunawa is sneaky. She will seek first to beguile and mislead and will only strike out with violence when no other option is available. When she does, though, her jaws are strong enough to crack the hull of any swamp-boat and certainly enough to slice through a steel breastplate or two. Give the greedy snake your treasures and she might just leave you alone. <em>Instinct</em>: To devour</p>
 <ul><li>Lure prey with lies and illusions</li>
 <li>Lash out at light</li>
@@ -130,14 +130,14 @@
 <h3 class="MonsterName">黑布丁 (Black Pudding)	<span class="Tags">單獨, 不定型</span></h3>
 <p class="MonsterStats">Corrosive touch (d10 傷害, 無視護甲), 15 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Amorphous</p>
+<p class="MonsterQualities"><strong>特性:</strong> 兩棲</p>
 <p class="MonsterDescription">How do you kill a pile of goo? A great, squishy pile of goo that also happens to want to dissolve you and slurp you up? That is a good question to which I have no answer. Do let us know when you find out. <em>Instinct</em>: To dissolve</p>
 <ul><li>Eat away metal, flesh, or wood</li>
 <li>Ooze into a troubling place: food, armor, stomach</li></ul>
 <h3 class="MonsterName">羽蛇 (Couatl)	<span class="Tags">單獨, 聰穎, 狡猾</span></h3>
 <p class="MonsterStats">Light ray (d8 傷害, 無視護甲), 12 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Wings, Halo</p>
+<p class="MonsterQualities"><strong>特性:</strong> 羽翼, 光環</p>
 <p class="MonsterDescription">As if in direct defiance of the decay and filth of the world, the gods granted us the coutal. As if to say, “there is beauty, even in this grim place.” A serpent in flight on jeweled wings, these beautiful creatures glow with a soft light, as the sun does through stained glass. Bright, wise, and calm, a coutal often knows many things and sees many more. You might be able to make a trade with it in exchange for some favor. They seek to cleanse and to purge and to make of this dark world a better one. Shame we have so few. The gods are cruel. <em>Instinct</em>: To cleanse</p>
 <ul><li>Pass judgment on a person or place</li>
 <li>Summon divine forces to cleanse</li>
@@ -145,7 +145,7 @@
 <h3 class="MonsterName">巨鱷 (Crocodilian)	<span class="Tags">集團, 大型</span></h3>
 <p class="MonsterStats">Bite (d8+3 傷害), 10 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Amphibious, Camouflage</p>
+<p class="MonsterQualities"><strong>特性:</strong> 兩棲, 保護色</p>
 <p class="MonsterDescription">It’s a really, really big crocodile. Seriously. So big. <em>Instinct</em>: To eat</p>
 <ul><li>Attack an unsuspecting victim</li>
 <li>Escape into the water</li>
@@ -153,7 +153,7 @@
 <h3 class="MonsterName">二重身 (Doppelgänger)	<span class="Tags">單獨, 狡猾, 聰穎</span></h3>
 <p class="MonsterStats">Dagger (d6 傷害), 12 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Shapeshifting</p>
+<p class="MonsterQualities"><strong>特性:</strong> 變形</p>
 <p class="MonsterDescription">Their natural form, if you ever see it, is hideous. Like a creature who stopped growing part-way, before it decided it was elf or man or dwarf. Then again, maybe that’s how you get to be the way a doppelgänger is—without form, without shape to call their own, maybe all they really seek is a place to fit in. If you go out into the world, when you come back home, make sure your friends are who you think they are. They might, instead, be a doppelgänger and your friend might be dead at the bottom of a well somewhere. Then again, depending on your friends, that might be an improvement. <em>Instinct</em>: To infiltrate</p>
 <ul><li>Assume the shape of a person whose flesh it’s tasted</li>
 <li>Use another’s identity to advantage</li>
@@ -161,7 +161,7 @@
 <h3 class="MonsterName">龍龜 (Dragon Turtle)	<span class="Tags">單獨, 巨型, 謹慎</span></h3>
 <p class="MonsterStats">Bite (d10+3 傷害), 20 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">及遠</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Shell, Amphibious</p>
+<p class="MonsterQualities"><strong>特性:</strong> 甲殼, 兩棲</p>
 <p class="MonsterDescription">Bakunawa has a brother. Where she is quick to anger and hungry for gold, he is slow and sturdy. She is a knife and he is a shield. A great turtle that lies in the muck and mire for ages as they pass, mud piled upon his back—sometimes trees and shrubs. Sometimes a whole misguided clan of goblins will build their huts and cook their ratty meals on the shell of the dragon turtle. His snapping jaws may be glacier-slow, but they can rend a castle wall. Careful where you tread. <em>Instinct</em>: To resist change</p>
 <ul><li>Move forward implacably</li>
 <li>Bring its full bulk to bear</li>
@@ -169,7 +169,7 @@
 <h3 class="MonsterName">幼龍 (Dragon Whelp)	<span class="Tags">單獨, 小型, 聰穎, 謹慎, 囤財者</span></h3>
 <p class="MonsterStats">Elemental breath (d10+2 傷害), 16 HP, 3 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 短程</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Wings, Elemental Blood</p>
+<p class="MonsterQualities"><strong>特性:</strong> 翅膀, 元素血脈</p>
 <p class="MonsterDescription">What? Did you think they were all a mile long? Did you think they didn’t come smaller than that? Sure, they may be no bigger than a dog and no smarter than an ape, but a dragon whelp can still belch up a hellish ball of fire that’ll melt your armor shut and drop you screaming into the mud. Their scales, too, are softer than those of their bigger kin, but can still turn aside an arrow or sword not perfectly aimed. Size is not the only measure of might. <em>Instinct</em>: To grow in power</p>
 <ul><li>Start a lair, form a base of power</li>
 <li>Call on family ties</li>
@@ -177,7 +177,7 @@
 <h3 class="MonsterName">埃克克鳥妖 (Ekek)	<span class="Tags">成群</span></h3>
 <p class="MonsterStats">Talons (d6 傷害), 3 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Wing-arms</p>
+<p class="MonsterQualities"><strong>特性:</strong> 翼肢</p>
 <p class="MonsterDescription">Ugly, wrinkled bird-folk, these. Once, maybe, in some ancient past, they were a race of angelic men from on high, but now they eat rats that they fish from the murk with talon-feet and devour with needle-teeth. They understand the tongues of men and dwarves but speak in little more than gibbering tongues, mimicking the words they hear with mocking laughter. It’s a chilling thing to see a beast so close to man or bird but not quite either one. <em>Instinct</em>: To lash out</p>
 <ul><li>Attack from the air</li>
 <li>Carry out the bidding of a more powerful creature</li></ul>
@@ -189,9 +189,9 @@
 <ul><li>Catch someone or something on fire (even underwater)</li>
 <li>Consume burning prey</li></ul>
 <h3 class="MonsterName">蛙人 (Frogman)	<span class="Tags">成群, 小型, 聰穎</span></h3>
-<p class="MonsterStats">Spear (d6 傷害), 7 HP, 1 護甲</p>
+<p class="MonsterStats">長矛 (d6 傷害), 7 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Amphibious</p>
+<p class="MonsterQualities"><strong>特性:</strong> 兩棲</p>
 <p class="MonsterDescription">Croak croak croak. Little warty munchkins. Some wizard or godling’s idea of a bad joke, these creatures are. They stand as men, dress in scavenged cloth and hold court in their froggy villages. They speak a rumbling pidgin form of the tongue of man and are constantly at war with their neighbors. They’re greedy and stupid but clever enough when they need to defend themselves. Some say, too, their priests have a remarkable skill at healing. Or maybe they’re just really, really hard to kill. <em>Instinct</em>: To wage war</p>
 <ul><li>Launch an amphibious assault</li>
 <li>Heal at a prodigious rate</li></ul>
@@ -203,9 +203,9 @@
 <ul><li>Attack many enemies at once</li>
 <li>Regenerate a body part (especially a head)</li></ul>
 <h3 class="MonsterName">狗頭人 (Kobold)	<span class="Tags">成群, 小型, 隱匿, 聰穎, 組織</span></h3>
-<p class="MonsterStats">Spear (d6 傷害), 3 HP, 1 護甲</p>
+<p class="MonsterStats">長矛 (d6 傷害), 3 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Dragon connection</p>
+<p class="MonsterQualities"><strong>特性:</strong> 龍族聯繫</p>
 <p class="MonsterDescription">Some are wont to lump these little, rat-like dragon-men in with goblins and orcs, bugbears and hobgoblins. They are smarter and wiser than their kin, however. The kobolds are beholden slaves to dragons and were, in ancient times, their lorekeepers and sorcerer-servants. Their clans, with  names like Ironscale and Whitewing, form around a dragon master and live to serve and do its bidding. Spotting a kobold means more are near—and if more are near then a mighty dragon cannot be far, either. <em>Instinct</em>: To serve dragons</p>
 <ul><li>Lay a trap</li>
 <li>Call on dragons or draconic allies</li>
@@ -213,14 +213,14 @@
 <h3 class="MonsterName">蜥蜴人 (Lizardman)	<span class="Tags">集團, 隱匿, 聰穎, 組織</span></h3>
 <p class="MonsterStats">Spear (d8 傷害), 6 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Amphibious</p>
+<p class="MonsterQualities"><strong>特性:</strong> 兩棲</p>
 <p class="MonsterDescription">A traveling sorcerer once told me that lizardmen came before we did. That before elves and dwarves and men built even the first of their wattle huts, a race of proud lizard kings strode the land. That they lived in palaces of crystal and worshipped their own scaly gods. Maybe that’s true and maybe it ain’t—now they dwell in places men long forgot or abandoned, crafting tools from volcano-glass and lashing against the works of the civilized world. Maybe they just want back what they lost. <em>Instinct</em>: To destroy civilization</p>
 <ul><li>Ambush the unsuspecting</li>
 <li>Launch an amphibious assault</li></ul>
 <h3 class="MonsterName">梅杜莎 (Medusa)	<span class="Tags">單獨, 狡猾, 聰穎, 囤財者</span></h3>
-<p class="MonsterStats">Claws (d6 傷害), 12 HP, 0 護甲</p>
+<p class="MonsterStats">利爪 (d6 傷害), 12 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Look turns you to stone</p>
+<p class="MonsterQualities"><strong>特性:</strong> 將你變成石頭的注視</p>
 <p class="MonsterDescription">The medusa are children of a serpent-haired mother, birthing them in ancient times to bear her name across the ages. They dwell near places of civilization—luring folks to their caves with promises of beauty or riches untold. Fine appreciators of art, the medusa curate strange collections of their victims, terror or ecstasy frozen forever in stone. It satisfies their vanity to know they were the last thing seen in so many lives. Arrogant, proud, and spiteful, in their way, they seek what so many do—endless company. <em>Instinct</em>: To collect</p>
 <ul><li>Turn a body part to stone with a look</li>
 <li>Draw someone’s gaze</li>
@@ -228,7 +228,7 @@
 <h3 class="MonsterName">沙華魚人 (Sahuagin)	<span class="Tags">成群, 聰穎</span></h3>
 <p class="MonsterStats">Endless teeth (d6+4 傷害, 1 穿透), 3 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 強力, 毀亂</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Amphibious</p>
+<p class="MonsterQualities"><strong>特性:</strong> 兩棲</p>
 <p class="MonsterDescription">The shape and craft of men wedded to the hunger and the endless teeth of a shark. Voracious and filled only with hate, these creatures will not stop until all life has been consumed. They cannot be reasoned with, they cannot be controlled or sated. They are hunger and bloodlust, driven up from the depths of the sea to ravage coastal towns and swallow island villages. <em>Instinct</em>: To spill blood</p>
 <ul><li>Bite off a limb</li>
 <li>Hurl a poisoned spear</li>
@@ -257,9 +257,9 @@
 <ul><li>Undo the effects of an attack (unless caused by a weakness, your call)</li>
 <li>Hurl something or someone</li></ul>
 <h3 class="MonsterName">鬼火 (Will-o-wisp)	<span class="Tags">單獨, 微型, 魔法</span></h3>
-<p class="MonsterStats">Ray (w[2d8-2] 傷害), 12 HP, 0 護甲</p>
+<p class="MonsterStats">射線 (低[2d8-2] 傷害), 12 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">短程</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Body of light</p>
+<p class="MonsterQualities"><strong>特性:</strong> 光之軀</p>
 <p class="MonsterDescription">Spot a lantern floating in the darkness, lost traveler in the swamp. Hope—a beacon of shimmering light. You call out to it, but there’s no answer. It begins to fade and so you follow, sloshing through the muck, tiring at the chase, hoping you’re being led to safety. Such a sad tale that always ends in doom. These creatures are a mystery—some say they’re ghosts, others beacons of faerie light. Nobody knows the truth. They are cruel, however. All can agree on that. <em>Instinct</em>: To misguide</p>
 <ul><li>Lead someone astray</li>
 <li>Clear a path to the worst place possible</li></ul>
