--- a/monsters/undead/index.html
+++ b/monsters/undead/index.html
@@ -150,15 +150,17 @@
 <p class="MonsterStats">鏽蝕利劍 (d6+1 傷害), 7 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 寒凍之觸</p>
-<p class="MonsterDescription">In the Nordemark, the men and women tell tales in their wooden halls of a place where the noble dead go. A mead hall atop their heavenly mountain where men of valor go to await the final battle for the world. It is a goodly place. It is a place where one hopes to go after death. And the inglorious dead? Those who fall to poison or in an act of cowardice, warriors though they may be? Well, those mead halls aren’t open to all and sundry. Some come back, frozen and twisted and empowered by jealous rage and wage their eternal war not on the forces of giants or trolls but on the towns of the men they once knew. <em>本能</em>: 從生者手中奪取</p>
+<p class="MonsterDescription">
+	在諾德瑪克，人們在他們那木造廳堂中訴說關於高尚死者前往死後世界的傳說故事：在天界神山之頂，那莊嚴的蜂蜜酒大廳，勇敢之人齊聚於此等待著投身於這個世界的終末之戰。這是個美好的場所，是個人們希望在死後能夠前往的聖地。至於那些不光彩的死者會前往何方？那些儘管身為戰士，卻死於卑鄙毒藥或怯懦愚行之人呢？嗯，蜂蜜酒大廳可不是對所有人敞開。他們之中有些會回到這個世上，僵冷，扭曲，被嫉妒的怒火所驅動，他們仍舊發起那永恆的征戰，卻不是朝著巨人和巨魔的勢力，而是指向他們曾經熟悉的城鎮。 <em>本能</em>: 從生者手中奪取</p>
 <ul>
 	<li>凍結血肉</li>
 	<li>召喚出毫無價值的死者</li></ul>
 <h3 class="MonsterName">鬼魂 (Ghost)<span class="Tags">單獨, 狡猾, 駭人</span></h3>
-<p class="MonsterStats">Phantom touch (d6 傷害), 16 HP, 0 護甲</p>
+<p class="MonsterStats">鬼魂之觸 (d6 傷害), 16 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 虛體生物</p>
-<p class="MonsterDescription">Every culture tells the story the same way. You live, you love or you hate, you win or you lose, you die somehow you’re not too fond of and here you are, ghostly and full of disappointment and what have you. Some people take it upon themselves, brave and kindly folks, to seek out the dead and help them pass to their rightful rest. You can find them, most times, down at the tavern drinking away the terrors they’ve seen or babbling to themselves in the madhouse. Death takes a toll on the living, no matter how you come by it. <em>本能</em>: 作祟</p>
+<p class="MonsterDescription">
+	每個文化都以相同的方式述說著這個故事。你活著，你愛過或恨過，或敗北或勝利，你以某種不怎麼願意的方式死去，然後，你成為這副模樣，幽魅縹緲，充滿著失望和盤旋不去的執念。有些人，勇敢而好心的人們主動承擔起尋找這些死者的責任，並希望幫助它們得到應有的安息。然而大多時，你會看到他們在酒館喝著烈酒消磨他們親眼見證的恐怖、或在瘋人院中胡言亂語著度過他們的餘生。死亡會對生者造成傷害，無論你是用何種形式與之相遇。 <em>本能</em>: 作祟</p>
 <ul>
 	<li>揭露關於死亡的駭人本質</li>
 	<li>在重要的場所作祟</li>
@@ -183,22 +185,26 @@
 <h3 class="MonsterName">魔魂屍 (Mohrg)<span class="Tags">集團</span></h3>
 <p class="MonsterStats">噬咬 (d8 傷害), 10 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterDescription">You never get away with murder. Not really. You might evade the law, might escape your own conscience in the end and die, fat and happy in a mansion somewhere. When the gods themselves notice your misdeeds, though, that’s where your luck runs out and a mohrg is born. The mohrg is a skeleton—flesh and skin and hair all rotted away. All but their guts—their twisted, knotted guts still spill from their bellies, magically preserved and often wrapped, noose-like, about their necks. They do not think, exactly, but they suffer. They kill and wreak havoc and their souls do not rest. Such is the punishment, both on them for the crime and on all mankind for daring to murder one another. The gods are just and they are harsh. <em>本能</em>: To wreak havoc</p>
-<ul><li>Rage</li>
-<li>Add to their collection of guts</li></ul>
+<p class="MonsterDescription">
+	你永遠無法真正擺脫謀殺的罪孽。或許你可以逃過法律的制裁、或許你能逃過內心良知的譴責直到最後，癡肥快樂的在某處的豪宅中死去。然而，當諸神注意到你的惡行，那就是你用盡運氣之時，也是魔魂屍誕生的瞬間。魔魂屍看起來就像是骷髏──它的血肉、肌膚、和毛髮早已腐爛殆盡。除了它的內臟之外──它們那扭曲、纏結的內臟仍然被魔法給保存，從它們的腹中滿溢散亂，並經常如同絞索般纏繞在它們的脖頸。確切來說，它們並不思考，但它們永遠承受著痛苦折磨。它們殺戮，肆虐，而它們的靈魂永世不得安息。這就是諸神降下的懲罰，是對它們犯下的罪刑，同時也是對所有人類膽敢互相謀殺的懲罰。諸神是公義的，也是嚴厲的。 <em>本能</em>: 肆虐破壞</p>
+<ul>
+	<li>狂怒</li>
+	<li>添加到它們的內臟收藏之中</li></ul>
 <h3 class="MonsterName">木乃伊 (Mummy)<span class="Tags">單獨, 神聖, 囤財者</span></h3>
 <p class="MonsterStats">猛砸 (d10+2 傷害), 16 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterDescription">There are cultures who revere the dead. They do not bury them in the cold earth and mourn their passing. These people spend weeks preparing the sacred corpse for its eternal rest. Temples, pyramids, and great vaults of stone are built to house them and are populated with slaves, pets and gold. The better to live in luxury beyond the Black Gates, no? Do not be tempted by these vaults—oh, I know that greedy look! Heed my warnings or risk a terrible fate, for the honored dead do not wish to be disturbed. Thievery will only raise their ire—don’t say I did not warn you! <em>本能</em>: To enjoy eternal rest</p>
-<ul><li>Curse them</li>
-<li>Wrap them up</li>
-<li>Rise again</li></ul>
-<h3 class="MonsterName">夜翼 (Nightwing)<span class="Tags">成群, 隱匿</span></h3>
+<p class="MonsterDescription">
+	有些文化崇敬死者。他們並不會將它們埋葬在冰冷的土裡，也不會為它們的逝去而哀悼。這群人們會花上數週的時間為神聖的遺體預備它們永恆的安息。神廟、金字塔、或巨大的石窖被建造來安置它們，並放滿了奴隸、寵物、和黃金財寶。在黑門之外過著這般奢華生活豈不甚好，不是嗎？不要被這些陵墓所誘惑──噢，我認得那貪婪的眼神！聽從我的警告、否則就準備迎接可怕的命運，因為那些尊貴的死者並不希望被打擾。盜竊只會喚起它們的憤怒──別說我沒有警告過你！ <em>本能</em>: 享受永恆的安息</p>
+<ul>
+	<li>詛咒他們</li>
+	<li>把他們纏綁起來</li>
+	<li>再次復活</li></ul>
+<h3 class="MonsterName">飛翼夜影 (Nightwing)<span class="Tags">成群, 隱匿</span></h3>
 <p class="MonsterStats">揪扯 (d6 傷害), 7 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 飛翼</p>
 <p class="MonsterDescription">
-	死靈學派的學者們會告訴你，「不死生物」這個詞並不僅僅適用於那些曾經活過，死去，然後再以某種半死不活的狀態被喚回這個世上的存在。這個名稱可以使用在任何生命能量源自於漆黑之門彼端的生物。而那些被人們稱之為「夜翼」的生物，就屬於這類──牠們因死亡領域的負能量光輝而得以存在。牠們的外型彷彿某種巨大、影子般的帶翼生物（有些比較像蝙蝠、有些像是禿鷲、而有些則更像是某種古老、皮革堅韌的怪物），夜翼會成群移動，從夜空中俯衝而下，撕扯牛、馬、或那些在宵禁過後外出的不幸村民身上的血肉。留意牠們在夜空中的血紅雙眼，聆聽牠們的尖嘯，然後向神祈禱你能在牠們遠去之前找到躲藏的地方。 <em>本能</em>: 狩獵</p>
+	死靈學派的學者們會告訴你，「不死生物」這個詞並不僅僅適用於那些曾經活過，死去，然後再以某種半死不活的狀態被喚回這個世上的存在。這個名稱可以使用在任何生命能量源自於漆黑之門彼端的生物。而那些被人們稱之為「飛翼夜影」的生物，就屬於這類──牠們因死亡領域的負能量光輝而得以存在。牠們的外型彷彿某種巨大、影子般的帶翼生物（有些比較像蝙蝠、有些像是禿鷲、而有些則更像是某種古老、皮革堅韌的怪物），飛翼夜影會成群移動，從夜空中俯衝而下，撕扯牛、馬、或那些在宵禁過後外出的不幸村民身上的血肉。留意牠們在夜空中的血紅雙眼，聆聽牠們的尖嘯，然後向神祈禱你能在牠們遠去之前找到躲藏的地方。 <em>本能</em>: 狩獵</p>
 <ul>
 	<li>從夜空襲擊</li>
 	<li>帶著獵物飛走</li></ul>
@@ -206,21 +212,25 @@
 <p class="MonsterStats">陰影之觸 (d6+1 傷害), 11 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 幽影型態</p>
-<p class="MonsterDescription">We call to the elements. We call on fire, ever-burning. We summon water, life-giving. We beseech the earth, stable-standing. We cry to the air, forever-changing. These elements we recognize and give our thanks but ask to pass. The elemental we call upon this night knows another name. We call upon the element of Night. Shadow, we name you. Death’s messenger and black assassin, we claim for our own. Accept our sacrifice and do our bidding ’til the morning come. <em>本能</em>: To darken</p>
-<ul><li>Snuff out light</li>
-<li>Spawn another shadow from the dead</li></ul>
+<p class="MonsterDescription">
+	我們調用元素。我們呼喚那永遠燃燒的烈火。我們召喚那賜予生命的活水。我們懇求那堅實挺立的大地。我們呼喊那恆久變換的大氣。這些元素是我們所認識的，我們感謝，但要求它們離去。因為今晚，我們呼喚的元素有另一個名字。我們喚起那黑夜的元素。陰影，我們將這名賜予給你。死亡的信使，黑暗的刺客，你為我們所用。接受我們的獻祭，並聽從我們的命令，直到清晨來臨之前。 <em>本能</em>: 加深黑暗</p>
+<ul>
+	<li>熄滅光明</li>
+	<li>從死者誕生出另一個幽影</li></ul>
 <h3 class="MonsterName">錫格賓吸血獸 (Sigben)<span class="Tags">成群, 大型, 構裝體</span></h3>
 <p class="MonsterStats">尾鞭 (d6+1 傷害), 11 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 吸血鬼眷族</p>
-<p class="MonsterDescription">“Aswang-hound and hopping whip-tail! Sent by vampires on their two, twisted legs, these ugly things look like the head of a rat or a crocodile, maybe, furry though and sharp of tooth. They have withered wings, but cannot use them and long, whipping tails, spurred with poison tips. Stupid, vengeful and mischievous they cause all kinds of chaos when let out of the strange clay jars in which they’re born. Only a vampire could love such a wretched thing.” <em>本能</em>: To disturb</p>
+<p class="MonsterDescription">
+	「阿斯旺的獵犬，那躍動的鞭尾！受到吸血鬼差遣，用牠們那兩條扭曲的瘦腿匍匐而來，這些醜陋的東西有著老鼠或鱷魚的頭，或許毛髮叢生，且有著尖銳的利牙。牠們有著萎縮而無法使用的雙翼，也有著細長，能如鞭子般輝動的長尾，末端長著能注入毒液的尖刺。愚蠢、記仇、充滿惡意，當被從誕生的怪異陶罐中是放出來時，牠們將引發一切混亂。只有吸血鬼會喜歡這種惡劣卑鄙的玩意兒。」 <em>本能</em>: 擾亂</p>
 <ul>
 	<li>使他們中毒</li>
 	<li>執行吸血鬼下的命令</li></ul>
 <h3 class="MonsterName">骷髏 (Skeleton)<span class="Tags">成群</span></h3>
 <p class="MonsterStats">猛擊 (d6 傷害), 7 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
-<p class="MonsterDescription">爛骨頭、壞骨頭、這些該死的乾骨頭。 <em>本能</em>: 做出仍然活著的表象</p>
+<p class="MonsterDescription">
+	爛骨頭、壞骨頭、這些該死的乾骨頭。 <em>本能</em>: 做出仍然活著的行為表象</p>
 <ul>
 	<li>做出它們生前所做過的行為</li>
 	<li>扼殺生命的溫暖</li>
