--- a/monsters/experiments/index.html
+++ b/monsters/experiments/index.html
@@ -225,7 +225,8 @@
 <p class="MonsterStats">銳利馬蹄 (d8 傷害), 10 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 飛翼</p>
-<p class="MonsterDescription">Don’t go thinking that every creature not natural-born is a horrible abomination. Don’t imagine for a second that they’re all tentacles and screaming and blood or whatever. Take this noble beast, for example. Lovely thing, isn’t it? A fine white horse with the wings of a swan. Don’t look like it ought to be able to fly, but it does. The elves work miracles, in their own way. They breed true—that’s the purity of elf-magic at work. Hatching from little crystal eggs and bonded with their riders for life. There’s still some beauty in the world, mark my words. <em>本能</em>: To carry aloft</p>
+<p class="MonsterDescription">
+	不要認定每個非源於自然的生物都是可怕、面目可憎的怪物。也千萬不要想像牠們全都有著觸手、尖叫、沐浴著鮮血等等。以這隻高貴的生物為例。多麼美妙的存在，不是嗎？一隻長有天鵝羽翼的白色駿馬。精靈以他們自己的方式創造奇跡，他們孕育真理──而這也正是精靈魔法的純淨。從小巧的水晶蛋中孵化而出，並終生與牠們的騎手聯繫合一。這世上還是存在著些美麗的事物，我保證。 <em>本能</em>: 載上空中</p>
 <ul>
 	<li>載著騎手飛上空中</li>
 	<li>讓牠的騎手獲得優勢</li></ul>
@@ -233,15 +234,17 @@
 <p class="MonsterStats">腐蝕之觸 (d8 傷害, 無視護甲), 6 HP, 3 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 腐蝕之觸</p>
-<p class="MonsterDescription">A very distinctive-looking creature. Something like a reddish cricket, I think. Long crickety legs, anyhow. Blind, too, as I understand it—they feel their way around with those long moth-looking tendrils. Feed that way, too. Sift through piles of metal for the choicest bits. That’s what they eat, don’t matter the type, neither. Their merest touch turns it all to rusted flakes. Magic lasts longer but under the scrutiny of a rust monster, it’s a foregone conclusion. Only the gods know where they came from, but they’re a curse if you value your belongings. <em>本能</em>: 蛀蝕</p>
+<p class="MonsterDescription">
+	這是一頭外貌相當與眾不同的生物。看起來像是某種類似淡紅色蟋蟀的生物，我覺得啦，畢竟不管怎麼看，牠那長長的腿都像極了蟋蟀。就我所知，牠們也是瞎的──牠們用蛾一般的長長卷鬚摸索著前進的方向。牠們也用這種方式來進食，從成堆的金屬中用卷鬚篩選出最上等的小塊。這就是牠們吃的東西，無論種類。即使是牠們最輕柔的碰觸也能將金屬全部化做被腐蝕的薄片。附有魔法的金屬或許能支撐更長的時間，但在鏽蝕怪的周密檢查下，結果已經能被預見。只有眾神知道牠們來自何方，如果你珍惜你的財物，那麼牠們就會是你最慘痛的詛咒。 <em>本能</em>: 蛀蝕</p>
 <ul>
 	<li>讓金屬鏽蝕</li>
 	<li>從吃食金屬的過程中獲得力量</li></ul>
 <h3 class="MonsterName">索爾石怪 (Xorn)	<span class="Tags">單獨, 大型, 構裝體</span></h3>
-<p class="MonsterStats">Maw (d10 傷害), 12 HP, 2 護甲</p>
+<p class="MonsterStats">血盆大口 (d10 傷害), 12 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 掘地</p>
-<p class="MonsterDescription">Dwarf-made elemental garbage muncher. Shaped like a trash bin with a radius of arms to feed excess rock and stone into its gaping maw. They eat stone and excrete light and heat. Perfect for operating a mine or digging out a quarry. Once one gets lost in the sewers below a city, though, or in the foundation of a castle? You’re in deep trouble. They’ll eat and eat until you’ve got nothing left but to collapse the place down on it and move somewhere else. Ask Burrin, Son of Fjornnvald, exile from his clan. I bet he could tell you a story about a xorn. <em>本能</em>: 吃食</p>
+<p class="MonsterDescription">
+	矮人製造的垃圾嚼食元素怪物。外型酷似一個垃圾桶，長著一圈粗壯手臂用來把多餘的岩石和石頭送進牠張開的血盆大口中。牠們以石頭為食，並散發出光與熱，非常適合用於營運礦場或在採石場挖掘。不過，萬一它迷路徬徨於城市的地下水道或城堡地基裡，那你可就惹上了個大麻煩。牠們會一直吃一直吃直到那裡什麼都不剩，並在上頭的建築坍方崩垮之後，再移動到其他地點繼續進食。去問問那被逐出部落的仸琺德之子博林吧。我敢打賭他肯定能跟你講一個關於索爾石怪的故事。 <em>本能</em>: 吃食</p>
 <ul>
 	<li>吃食岩石</li>
 	<li>發出一陣光和熱</li></ul>
