--- a/monsters/woods/index.html
+++ b/monsters/woods/index.html
@@ -128,7 +128,7 @@
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 幻象</p>
 <p class="MonsterDescription">
-	你剛才看見牠，現在就不見了。這些獵犬曾經被一名巫師領主擁有，並被灌注了某種幻術魔法構成的偽裝。牠們逃進了他領地周遭的森林，並與那做森林內的狼群和野犬繁衍後代。如果你夠幸運，你也許能透過牠們那閃閃發亮的銀色毛皮以及那怪異的嚎叫聲來找到牠們。牠們擁有一種非凡天賦，讓牠們可以不完全處在牠們看起來所在的位置，並利用這種天賦來擊倒那些遠比牠們強大的獵物。如果你發現自己必須面對一群閃現犬，不妨閉上眼睛與牠們交戰。在不被自然視覺所背叛的情況下，戰鬥可能會更輕鬆一些。正是因為這種邪佞巫術，這個世界的自然環境正逐漸被不自然的產物給玷汙。 <b>本能</b>: 狩獵</p>
+	你剛才看見牠，現在就不見了。這些獵犬曾經被一名巫師領主擁有，並被灌注了某種幻術魔法構成的偽裝。牠們逃進了他領地周遭的森林，並與那座森林中的狼群和野犬繁衍後代。如果你夠幸運，你也許能透過牠們那閃閃發亮的銀色毛皮以及那怪異的嚎叫聲來找到牠們。牠們擁有一種非凡天賦，讓牠們可以不完全處在牠們看起來所在的位置，利用這種天賦，牠們能夠擊倒那些遠比牠們強大的獵物。如果你發現自己必須面對一群閃現犬，不妨閉上眼睛與牠們交戰。在不被自然視覺所背叛的情況下，戰鬥可能會更輕鬆一些。正是因為這種邪佞巫術，這個世界的自然環境正逐漸被不自然的產物給玷汙。 <b>本能</b>: 狩獵</p>
 <ul>
 	<li>讓自己看起來像是位於牠們不存在的位置假象</li>
 	<li>召喚犬群</li>
