--- a/license/index.html
+++ b/license/index.html
@@ -269,7 +269,7 @@ END OF LICENSE</p>
 
 
     
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/jquery.js"></script>
     
     <script src="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/js/bootstrap.min.js"></script>
     <script>
