--- a/monsters/swamp/index.html
+++ b/monsters/swamp/index.html
@@ -204,7 +204,7 @@
 <p class="MonsterStats"><span class="Tags">Hand</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 易燃油, 水棲</p>
 <p class="MonsterDescription">
-	這些奇怪的生物並不比牠們世俗的親戚更大或更聰明。牠們擁有同樣兇殘的本性。跟牠們的親戚相比，牠們有一個優勢──一種從牠們皮膚滲出來的分泌物。這不僅讓牠們難以被抓住，更重要的是，牠們只要一個扭身就能點燃這玩意兒，讓覆蓋在水面上的大灘燃油熊熊燃燒，將獵物和獵食者一起烤個外酥裡嫩。我聽說這些滑溜溜的東西是製作抗火裝備的良好材料，但你必須先想辦法把它弄到手。 <em>本能</em>: 點燃</p>
+	這些奇怪的生物並不比牠們世俗的親戚更大或更聰明。牠們擁有同樣兇殘的本性，而跟牠們的親戚相比，牠們有一個優勢──一種從牠們皮膚滲出來的分泌物。這不僅讓牠們難以被抓住，更重要的是，牠們只要一個扭身就能點燃這玩意兒，讓覆蓋在水面上的大灘燃油熊熊燃燒，將獵物和獵食者一起烤個外酥裡嫩。我聽說這些滑溜溜的傢伙是製作抗火裝備的良好素材，但你必須先想辦法把牠弄到手。 <em>本能</em>: 點燃</p>
 <ul>
 	<li>讓某人或某物起火（即使在水中也一樣）</li>
 	<li>吃掉燃燒中的獵物</li></ul>
@@ -212,77 +212,97 @@
 <p class="MonsterStats">長矛 (d6 傷害), 7 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 兩棲</p>
-<p class="MonsterDescription">Croak croak croak. Little warty munchkins. Some wizard or godling’s idea of a bad joke, these creatures are. They stand as men, dress in scavenged cloth and hold court in their froggy villages. They speak a rumbling pidgin form of the tongue of man and are constantly at war with their neighbors. They’re greedy and stupid but clever enough when they need to defend themselves. Some say, too, their priests have a remarkable skill at healing. Or maybe they’re just really, really hard to kill. <em>本能</em>: To wage war</p>
-<ul><li>Launch an amphibious assault</li>
-<li>Heal at a prodigious rate</li></ul>
+<p class="MonsterDescription">
+	呱、呱、呱，這些生物，長著疣的侏儒們，就是某個巫師或地方神靈開的惡質玩笑。牠們像人一樣站立，身披破爛的布料，在牠們的蛙族村莊群聚。牠們說著一口混雜咕嚕聲的人類語言，且經常向牠們的鄰居發起戰爭。牠們貪婪，愚笨，但又有足夠的智慧知道該在何時自保。有人說，牠們族中的祭司在醫術方面相當有一手，又或者，牠們只是單純的，非常非常難以被殺死而已。 <em>本能</em>: 發動戰爭</p>
+<ul>
+	<li>發起水陸兩棲的襲擊</li>
+	<li>以驚人的速度治癒</li></ul>
 <h3 class="MonsterName">海德拉 (Hydra)	<span class="Tags">單獨, 大型</span></h3>
-<p class="MonsterStats">Bite (d10+3 傷害), 16 HP, 2 護甲</p>
+<p class="MonsterStats">噬咬 (d10+3 傷害), 16 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Many heads, Only killed by a blow to the heart</p>
-<p class="MonsterDescription">A bit like a dragon, wingless though it may be. Heads, nine in number at birth, spring from a muscled trunk and weave a sinuous pattern in the air. A hydra is to be feared—a scaled terror of the marsh. The older ones, though, they have more heads, for every failed attempt to murder it just makes it stronger. Cut off a head and two more grow in its place. Only a strike, true and strong, to the heart can end a hydra’s life. Not time or tide or any other thing but this. <em>本能</em>: To grow</p>
-<ul><li>Attack many enemies at once</li>
-<li>Regenerate a body part (especially a head)</li></ul>
+<p class="MonsterQualities"><strong>特性:</strong> 許多顆頭，只有對心臟發起的攻擊才能將其殺死</p>
+<p class="MonsterDescription">
+	與龍有些相似，儘管牠可能沒有翅膀。牠的頭，生來就有九個，從牠那肌肉發達的軀幹中延伸而出，並在半空中編織成一幅蜿蜒的可怕圖案。海德拉是應受敬畏的──牠們是沼澤中身披鱗片的恐怖化身。更年長一些的個體可能擁有更多的頭部，因為每一次試圖殺害牠的失敗，都只會讓牠變得更加強大：砍下一顆頭，原本的地方就會再長出二顆。只有一記瞄準牠心臟發起的真切強力打擊，才能夠確實結束海德拉的性命。除此之外別無他法。 <em>本能</em>: 成長茁壯</p>
+<ul>
+	<li>同時攻擊多個敵人</li>
+	<li>重新長出一個身體部位（尤其是頭部）</li></ul>
 <h3 class="MonsterName">狗頭人 (Kobold)	<span class="Tags">成群, 小型, 隱匿, 聰穎, 組織</span></h3>
 <p class="MonsterStats">長矛 (d6 傷害), 3 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 龍族聯繫</p>
-<p class="MonsterDescription">Some are wont to lump these little, rat-like dragon-men in with goblins and orcs, bugbears and hobgoblins. They are smarter and wiser than their kin, however. The kobolds are beholden slaves to dragons and were, in ancient times, their lorekeepers and sorcerer-servants. Their clans, with  names like Ironscale and Whitewing, form around a dragon master and live to serve and do its bidding. Spotting a kobold means more are near—and if more are near then a mighty dragon cannot be far, either. <em>本能</em>: To serve dragons</p>
-<ul><li>Lay a trap</li>
-<li>Call on dragons or draconic allies</li>
-<li>Retreat and regroup</li></ul>
+<p class="MonsterDescription">
+	有些人習慣把這些矮小、老鼠般的龍人與哥布林、半獸人、熊地精、和大哥布林混為一談。然而實際上，牠們可比這些同類還要更聰明和智慧得多。狗頭人是龍族忠實的奴僕，且在古老的年代曾擔任牠們的傳唱者和術法隨從。牠們的部落冠有像是「鐵鱗」和「白翼」之類的名號，圍繞著牠們的龍族主人建造，生來為其服務並服從牠的命令。當你看到一隻狗頭人，通常代表附近還有更多──而如果有更多狗頭人在附近，那麼一頭強大的巨龍恐怕也不會離你太遠。 <em>本能</em>: 服侍龍族</p>
+<ul>
+	<li>設下陷阱</li>
+	<li>呼喚龍族或者龍類盟友</li>
+	<li>撤退並重新集合</li></ul>
 <h3 class="MonsterName">蜥蜴人 (Lizardman)	<span class="Tags">集團, 隱匿, 聰穎, 組織</span></h3>
-<p class="MonsterStats">Spear (d8 傷害), 6 HP, 2 護甲</p>
+<p class="MonsterStats">長矛 (d8 傷害), 6 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 兩棲</p>
-<p class="MonsterDescription">A traveling sorcerer once told me that lizardmen came before we did. That before elves and dwarves and men built even the first of their wattle huts, a race of proud lizard kings strode the land. That they lived in palaces of crystal and worshipped their own scaly gods. Maybe that’s true and maybe it ain’t—now they dwell in places men long forgot or abandoned, crafting tools from volcano-glass and lashing against the works of the civilized world. Maybe they just want back what they lost. <em>本能</em>: To destroy civilization</p>
-<ul><li>Ambush the unsuspecting</li>
-<li>Launch an amphibious assault</li></ul>
+<p class="MonsterDescription">
+	有位旅行術士曾經告訴我，蜥蜴人遠在我們以前就來到了這個世界。早在精靈、矮人、和人類用枝條築起他們第一個簡陋小屋之前，蜥蜴之王統領的驕傲種族早已在大地上昂首闊步。牠們居住在水晶築成的宮殿，膜拜牠們自己那長滿鱗片的諸神。這或許是真的、也可能不是──如今，牠們棲居在人類早已遺忘並遺棄的陰暗角落，以黑曜岩打造工具，並對文明世界的造物發起猛襲。或許，牠們也只不過是想奪回牠們早已失去的事物罷了。 <em>本能</em>: 摧毀文明</p>
+<ul>
+	<li>伏擊毫無防備的目標</li>
+	<li>發起水陸兩棲的襲擊</li></ul>
 <h3 class="MonsterName">梅杜莎 (Medusa)	<span class="Tags">單獨, 狡猾, 聰穎, 囤財者</span></h3>
 <p class="MonsterStats">利爪 (d6 傷害), 12 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 將你變成石頭的注視</p>
-<p class="MonsterDescription">The medusa are children of a serpent-haired mother, birthing them in ancient times to bear her name across the ages. They dwell near places of civilization—luring folks to their caves with promises of beauty or riches untold. Fine appreciators of art, the medusa curate strange collections of their victims, terror or ecstasy frozen forever in stone. It satisfies their vanity to know they were the last thing seen in so many lives. Arrogant, proud, and spiteful, in their way, they seek what so many do—endless company. <em>本能</em>: To collect</p>
-<ul><li>Turn a body part to stone with a look</li>
-<li>Draw someone’s gaze</li>
-<li>Show hidden terrible beauty</li></ul>
+<p class="MonsterDescription">
+	梅杜莎是蛇髮之母的孩子，她在遠古時代把她們生下來，並世世代代傳承她的名號。她們棲息在文明社會的附近──以難以言喻的美好承諾或財富誘惑人們來到她們的洞穴之中。身為優秀的藝術鑑賞家，梅杜莎策展她們那些受害者化成的怪異收藏，將恐懼和狂喜永遠凍結在石頭上。知道自己成為了這麼多生命最後所見的事物，這大大滿足了她們的虛榮心。自大、驕傲、且惡毒，她們以自己的方式尋求著很多人所追求的──永無止境的陪伴。 <em>本能</em>: 收集</p>
+<ul>
+	<li>透過視線將身體部位變成石頭</li>
+	<li>吸引某人的目光</li>
+	<li>展現隱藏起來的駭人美艷</li></ul>
 <h3 class="MonsterName">沙華魚人 (Sahuagin)	<span class="Tags">成群, 聰穎</span></h3>
-<p class="MonsterStats">Endless teeth (d6+4 傷害, 1 穿透), 3 HP, 2 護甲</p>
+<p class="MonsterStats">無盡之牙 (d6+4 傷害, 1 穿透), 3 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 強力, 毀亂</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 兩棲</p>
-<p class="MonsterDescription">The shape and craft of men wedded to the hunger and the endless teeth of a shark. Voracious and filled only with hate, these creatures will not stop until all life has been consumed. They cannot be reasoned with, they cannot be controlled or sated. They are hunger and bloodlust, driven up from the depths of the sea to ravage coastal towns and swallow island villages. <em>本能</em>: To spill blood</p>
-<ul><li>Bite off a limb</li>
-<li>Hurl a poisoned spear</li>
-<li>Frenzy at the sight of blood</li></ul>
+<p class="MonsterDescription">
+	人類的身形和技藝與鯊魚的飢餓和無盡利齒相互結合。貪婪飢渴，內心被純粹的仇恨所充滿，直到所有生物被吞食殆盡之前這些醜惡的生物都不會停下。你無法跟牠們講道理，牠們也無法被控制或滿足。牠們飢餓且嗜血，從大海的深處被驅趕上來蹂躪著沿海城鎮、吞噬著島嶼村落。 <em>本能</em>: 讓鮮血四濺</p>
+<ul>
+	<li>咬斷一個肢體</li>
+	<li>投擲塗毒的長矛</li>
+	<li>見血瘋狂</li></ul>
 <h3 class="MonsterName">長頸恐龍 (Sauropod)	<span class="Tags">集團, 巨型, 謹慎</span></h3>
-<p class="MonsterStats">Trample (d10+5 傷害), 18 HP, 4 護甲</p>
+<p class="MonsterStats">踐踏 (d10+5 傷害), 18 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">及遠</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Armor plated body</p>
-<p class="MonsterDescription">Great lumbering beasts, they live in places long since forgotten by the thinking races of the world. Gentle if unprovoked, but mighty if their ire is raised, they trample smaller creatures with the care we might give to crushing an ant beneath our boots. If you see one, drift by and gaze in awe, but do not wake the giant. <em>本能</em>: To endure</p>
-<ul><li>Stampede</li>
-<li>Knock something down</li>
-<li>Unleash a deafening bellow</li></ul>
+<p class="MonsterQualities"><strong>特性:</strong> 裝甲般厚重的身軀</p>
+<p class="MonsterDescription">
+	牠們是笨拙緩慢的巨獸，居住在早已被這個世界上思維種族長久遺忘之地。沒有被激怒時是如此溫和，但當牠們的怒火被點燃時又是如此強大可佈，牠們踐踏比牠們更小的生物，就如同我們對待被我們靴底碾碎的螻蟻一般。如果你見到牠，那麼請帶著敬畏的眼神飄過吧。千萬不要試圖喚醒這頭巨獸。 <em>本能</em>: 忍耐</p>
+<ul>
+	<li>踩踏</li>
+	<li>把東西撞倒</li>
+	<li>發出震耳欲聾的咆哮聲</li></ul>
 <h3 class="MonsterName">沼澤蔓生者 (Swamp Shambler)	<span class="Tags">單獨, 大型, 魔法</span></h3>
-<p class="MonsterStats">Lash (d10+1 傷害), 23 HP, 1 護甲</p>
+<p class="MonsterStats">鞭打 (d10+1 傷害), 23 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠, 強力</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Swamp form</p>
-<p class="MonsterDescription">Some elementals are conjured up in sacred circles etched in chalk. Most, in fact. There’s a sort of science to it. Others, though, aren’t so orderly—they don’t fall under the carefully controlled assignments of fire, air, water, or earth. Some are a natural confluence of vine and mire and fungus. They do not think the way a man might think. They cannot be understood as one might understand an elf. They simply are. Spirits of the swamp. Shamblers in the mud. <em>本能</em>: To preserve and create swamps</p>
-<ul><li>Call on the swamp itself for aid</li>
-<li>Meld into the swamp</li>
-<li>Reassemble into a new form</li></ul>
+<p class="MonsterQualities"><strong>特性:</strong> 沼澤型態</p>
+<p class="MonsterDescription">
+	有些元素是透過白粉筆銘刻而成的神聖圓環被召喚出來。事實上，大多數的元素都是如此，遵照著某種科學依據。不過，其他的就沒那麼有條理了──它們並不屬於火、氣、水、土這類被精心控制的分類中。它們有些是藤蔓、泥沼、和真菌構成的自然匯聚物。它們並不會以人類的方式思考，也不能被如同精靈一般被理解。它們單純只是，沼澤的精魂、泥濘中的漫步者。 <em>本能</em>: 保護並製造沼澤</p>
+<ul>
+	<li>向沼澤本身尋求援助</li>
+	<li>融入沼澤</li>
+	<li>重組成新的型態</li></ul>
 <h3 class="MonsterName">巨魔 (Troll)	<span class="Tags">單獨, 大型</span></h3>
-<p class="MonsterStats">Club (d10+3 傷害), 20 HP, 1 護甲</p>
+<p class="MonsterStats">棍棒 (d10+3 傷害), 20 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠, 強力</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Regeneration</p>
-<p class="MonsterDescription">Tall. Real tall. Eight or nine feet when they’re young or weak. Covered all over in warty, tough skin, too. Big teeth, stringy hair like swamp moss and long, dirty nails. Some are green, some gray, some black. They’re clannish and hateful of each other, not to mention all the rest of us. Near impossible to kill, too, unless you’ve fire or acid to spare—cut a limb off and watch. In a few days, you’ve got two trolls where you once had one. A real serious problem, as you can imagine. <em>本能</em>: To smash</p>
-<ul><li>Undo the effects of an attack (unless caused by a weakness, your call)</li>
-<li>Hurl something or someone</li></ul>
+<p class="MonsterQualities"><strong>特性:</strong> 再生</p>
+<p class="MonsterDescription">
+	高大，真的高大，牠們光在年少或虛弱時就有足足八到九呎高。全身都被結實、堅韌的硬皮覆蓋。長著大大的牙齒，宛如沼澤苔癬般的繩狀亂髮、以及又長又骯髒的指甲。牠們有些是綠色的，有些是灰色，也有些是黑色的。個性排外，且彼此互相憎恨，就更不用說牠們對我們其他種族會有什麼看法了。此外，牠們幾乎無法被殺死，除非你手上有多餘的烈火或強酸──試著切下牠們的一隻肢體，然後等著看，在幾天之後，你就能讓這原本只有一頭巨魔的地方得到第兩頭巨魔。你可以想像，這可是個非常嚴重的問題。 <em>本能</em>: 猛砸</p>
+<ul>
+	<li>復原一次攻擊造成的影響（除非是由弱點引發的影響，由你決定）</li>
+	<li>把某人或某物扔出去</li></ul>
 <h3 class="MonsterName">鬼火 (Will-o-wisp)	<span class="Tags">單獨, 微型, 魔法</span></h3>
 <p class="MonsterStats">射線 (低[2d8-2] 傷害), 12 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">短程</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 光之軀</p>
-<p class="MonsterDescription">Spot a lantern floating in the darkness, lost traveler in the swamp. Hope—a beacon of shimmering light. You call out to it, but there’s no answer. It begins to fade and so you follow, sloshing through the muck, tiring at the chase, hoping you’re being led to safety. Such a sad tale that always ends in doom. These creatures are a mystery—some say they’re ghosts, others beacons of faerie light. Nobody knows the truth. They are cruel, however. All can agree on that. <em>本能</em>: To misguide</p>
-<ul><li>Lead someone astray</li>
-<li>Clear a path to the worst place possible</li></ul>
+<p class="MonsterDescription">
+	在黑暗中看見一個漂浮的燈籠，對於迷途於沼澤中的旅行者而言，那是希望──是閃爍著光芒的燈塔。你試著向它呼喊，但卻無人應答。它逐漸隨著遠去而黯淡，於是你跟著它，嘩啦嘩啦地涉過泥沼，在追逐中感到疲倦，希望你終將被領到一個可安歇之所……遺憾的是，這類悲傷的故事總是以厄運告終。這些生物本身就是一個謎團──有人說它們是鬼魂，有些人則說是它們是妖精之火。沒有人知道真相，但它們確實殘酷──至少所有人都同意這一點。 <em>本能</em>: 誤導</p>
+<ul>
+	<li>使某人誤入歧途</li>
+	<li>清出一條通往最壞場所的道路</li></ul>
 
 
           </div>
@@ -300,7 +320,7 @@
 
 
     
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/jquery.js"></script>
     
     <script src="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/js/bootstrap.min.js"></script>
     <script>
