--- a/monsters/woods/index.html
+++ b/monsters/woods/index.html
@@ -311,7 +311,7 @@
 
 
     
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/jquery.js"></script>
     
     <script src="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/js/bootstrap.min.js"></script>
     <script>
