--- a/classes/cleric/spells/index.html
+++ b/classes/cleric/spells/index.html
@@ -287,7 +287,7 @@
 
 
     
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/jquery.js"></script>
     
     <script src="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/js/bootstrap.min.js"></script>
     <script>
