--- a/monsters/undead/index.html
+++ b/monsters/undead/index.html
@@ -239,9 +239,11 @@
 <p class="MonsterStats">凋零之觸 (d10 傷害), 12 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 虛體生物</p>
-<p class="MonsterDescription">For some folk, when they pass, Death himself cannot release their grip on the places they love most. A priest whose devotion to the temple is greater than that of his god. A banking guild official who cannot bear to part with his vault. A drunk and his favorite tavern. All make excellent spectres. They act not out of the usual hunger that drives the undead, but jealousy. Jealousy that anyone else might come to love their home as much as they do and drive them out. These places belong to them and these invisible spirits will kill before they’ll let anyone send them to their rest. <em>本能</em>: To drive life from a place</p>
-<ul><li>Turn their haunt against a creature</li>
-<li>Bring the environment to life</li></ul>
+<p class="MonsterDescription">
+	對某些人來說，當他們離世時，就連死神也沒辦法把他們從他們最鍾愛的地方解放出來。對聖殿的虔誠心更勝諸神的祭司、不願離開他金庫的銀行行會職員、醉漢和他最喜愛的酒館……這些人全都能在死後成為優秀的怨靈。它們的行為並不是出於那驅使著尋常亡靈的饑渴，而是嫉妒。它們嫉妒所有可能像它們一樣愛上它們家園的生者，並會不計一切代價把他們驅趕出去。這地屬於它們，而且這些不可視的靈魂將會在任何人膽敢遣它們安息之前下手殺戮。 <em>本能</em>: 把生者從某個場所中驅離</p>
+<ul>
+	<li>用它們的作祟能力對付一個生物</li>
+	<li>讓環境活過來</li></ul>
 <h3 class="MonsterName">吸血鬼 (Vampire)<span class="Tags">集團, 隱匿, 組織, 聰穎</span></h3>
 <p class="MonsterStats">超自然力量 (d8+5 傷害, 1 穿透), 10 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 強力</span></p>
@@ -256,7 +258,8 @@
 <p class="MonsterStats">撲擊 (d6+1 傷害 1 穿透), 7 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 幽影型態</p>
-<p class="MonsterDescription">Like the nightwing, the wight-wolf is a creature not spawned in our world. Somehow slipping the seals of the Black Gates of Death, these spirits take the shape of massive hounds or shadowy wolves and hunt the living for sport. They travel in packs, led by a mighty alpha, but bear a kind of intelligence unknown to true canines. Their wild hunts draw the attention of intelligent undead—liches, vampires and the like—who will sometimes make pacts with the alpha and serve a grim purpose together. Listen for the baying of the hounds of Death and pray that they do not howl for you. <em>本能</em>: 狩獵</p>
+<p class="MonsterDescription">
+	就像飛翼夜影，死靈狼也不是生自於我們的這個世界。不知何故鑽過了死亡國度黑門的封印，這些死靈化身為巨大的獵犬或陰影之狼，並以狩獵生者為樂。牠們成群結隊，由最強大的首領統領，卻擁有著一種真正的犬科所沒有的智慧。牠們狂野的狩獵吸引了那些智慧不死生物──巫妖、吸血鬼等等──的注意，且它們有時會與死靈狼的領袖達成協議，共同追尋著某個殘酷邪惡的目標。仔細聆聽死亡獵犬的吠叫，並祈禱牠們不要為了你而長嚎。 <em>本能</em>: 狩獵</p>
 <ul>
 	<li>包圍獵物</li>
 	<li>召喚狼群</li></ul>
